--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <section class= "hero"></section>
     <main class="content">
-        <article class="search-engine-optimization">
+        <article id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Desk with notes"class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -50,21 +50,21 @@
     </main>
     <aside class="benefits">
         <section class="benefit-lead">
-            <h3>Lead Generation</h3>
+            <h2>Lead Generation</h2>
             <img src="./assets/images/lead-generation.png" alt="Sun leading to funnel and profits" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
         <section class="benefit-brand">
-            <h3>Brand Awareness</h3>
+            <h2>Brand Awareness</h2>
             <img src="./assets/images/brand-awareness.png" alt="lightbulb glowing" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
         <section class="benefit-cost">
-            <h3>Cost Management</h3>
+            <h2>Cost Management</h2>
             <img src="./assets/images/cost-management.png" alt="Gear next to money signs"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
@@ -72,7 +72,7 @@
         </aside>
     </aside>
     <footer class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <h3>Made with ❤️️ by Horiseon</h3>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
